StyledElement::attributeChanged shouldn't do any work when the attribute value didn't change https://bugs.webkit.org/show_bug.cgi?id=129476

Reviewed by Andreas Kling.

Avoid calling styleAttributeChanged and setPresentationAttributeStyleIsDirty
when the attribute value didn't change as in r164856.

* dom/StyledElement.cpp:
(WebCore::StyledElement::attributeChanged):


Canonical link: https://commits.webkit.org/182213@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@208485 268f45cc-cd09-0410-ab3c-d52691b4dbfc